--- a/.github/workflows/master_slambook.yml
+++ b/.github/workflows/master_slambook.yml
@@ -22,6 +22,7 @@ jobs:
           node-version: '14.x'
 
       - name: npm install, build, and test
+        working-directory: ./backend
         run: |
           npm install
           npm run build --if-present
