--- a/.github/workflows/master_slambook.yml
+++ b/.github/workflows/master_slambook.yml
@@ -9,6 +9,10 @@ on:
       - master
   workflow_dispatch:
 
+defaults:
+ run:
+  working-directory: ./backend
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,7 +26,6 @@ jobs:
           node-version: '14.x'
 
       - name: npm install, build, and test
-        working-directory: ./backend
         run: |
           npm install
           npm run build --if-present
