--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
     "mongoose": "^6.4.6",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
